[package]
name = "ant-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version="0.12.0", features = ["file_watcher", "dynamic_linking"]}
bevy-inspector-egui = "0.21"
bevy_flycam = "*"
bevy_mod_picking = {version="*", features = ["backend_raycast"]}
